Implement some sidebar css and set editor font

--- a/src/component/app/App.css
+++ b/src/component/app/App.css
@@ -1,3 +1,7 @@
+@import url("https://dev-cats.github.io/code-snippets/JetBrainsMono.css");
+
 #app {
     height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
